hphp/hack/test/typecheck/fc_enum_15.php.exp
File "fc_enum_15.php", line 3, characters 12-16:
Enums must be int or string, not a mixed value (Typing[4024])
